@@ -2,8 +2,8 @@ package jpa.board.service;
 
 import jpa.board.domain.Comment;
 import jpa.board.domain.Member;
+import jpa.board.domain.Post;
 import jpa.board.dto.CommentDto;
-import jpa.board.exception.CommentNotFoundException;
 import jpa.board.exception.CommentPermissionException;
 import jpa.board.exception.MemberNotFoundException;
 import jpa.board.exception.PostNotFoundException;
@@ -12,87 +12,77 @@ import jpa.board.repository.MemberRepository;
 import jpa.board.repository.PostRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.security.access.AccessDeniedException;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.ZonedDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
-@Transactional
 @RequiredArgsConstructor
 @Service
 public class CommentService {
     private final CommentRepository commentRepository;
     private final MemberRepository memberRepository;
     private final PostRepository postRepository;
+    private final SecurityContextService securityContextService;
 
+    @Transactional
     public CommentDto.Response addCommentToPost(Long postId, CommentDto.Request commentDto) {
-        String currentMemberEmail = getCurrentMemberEmail();
-        Member member = findMemberByEmail(currentMemberEmail);
-        validatePostExists(postId);
-        Comment comment = commentDto.toEntity(member, postId);
+        Member member = findAuthenticatedMember();
+        Post post = findPostById(postId);
+
+        Comment comment = commentDto.toEntity(member, post.getId());
         Comment savedComment = commentRepository.save(comment);
-        CommentDto.Response response = new CommentDto.Response(savedComment.getId(), savedComment.getAuthorName(), savedComment.getComment(), savedComment.getCreatedDate());
-        return response;
+
+        log.info("Added comment with ID : {} to Post ID : {}", savedComment.getId(), postId);
+        return new CommentDto.Response(savedComment);
     }
 
+    @Transactional(readOnly = true)
     public List<CommentDto.Response> findCommentToPost(Long postId) {
-        List<Comment> commentList = commentRepository.findByPostId(postId);
-        return commentList.stream()
-                .map(Comment::toCommentDto)
-                .collect(Collectors.toList());
+        return commentRepository.findByPostId(postId).stream()
+                .map(CommentDto.Response::new)
+                .toList();
     }
 
+    @Transactional
     public CommentDto.Response updateCommentToPost(Long postId, CommentDto.Request request) {
-        validatePostExists(postId);
-        Comment comment = findCommentById(request.getId());
-        validateCommentAuthor(comment);
-        Long updatedCommentId = comment.updateComment(request.getComment());
-        return new CommentDto.Response(updatedCommentId, comment.getAuthorName(), comment.getComment(), ZonedDateTime.now());
+        Comment comment = validateCommentOwnership(postId, request.getId());
+
+        comment.updateComment(request.getComment());
+        log.info("Updated comment with ID : {} from Post ID : {}", comment.getId(), postId);
+        return new CommentDto.Response(comment);
     }
 
+    @Transactional
     public void deleteCommentById(Long postId, CommentDto.Request request) {
-        Comment storedComment = findCommentById(request.getId());
-        if (!storedComment.getPostId().equals(postId)) {
-            throw new CommentPermissionException("Comment ID : " + request.getId() + " Not Permission to Delete this Comment", request.getId());
-        }
-        commentRepository.deleteById(request.getId());
+        Comment comment = validateCommentOwnership(postId, request.getId());
+        commentRepository.delete(comment);
+        log.info("Deleted comment with ID : {} from Post ID : {}", comment.getId(), postId);
     }
 
-    private void validatePostExists(Long postId) {
-        if (!postRepository.existsById(postId)) {
-            throw new PostNotFoundException("Post ID : " + postId + " Not Found", postId);
-        }
+    private Post findPostById(Long postId) {
+        return postRepository.findById(postId)
+                .orElseThrow(() -> new PostNotFoundException("Post ID : " + postId + " Not Found", postId));
     }
 
-    private Comment findCommentById(Long commentId) {
-        return commentRepository.findById(commentId)
-                .orElseThrow(() -> new CommentNotFoundException("Comment ID : " + commentId + " Not Found", commentId));
+    private Comment validateCommentOwnership(Long postId, Long commentId) {
+        Comment comment = commentRepository.findByIdAndPostId(commentId, postId)
+                .orElseThrow(() -> new CommentPermissionException("Comment does not belong to Post. Comment ID : " + commentId + ", Post ID : " + postId, commentId));
+        validateCommentAuthor(comment);
+        return comment;
     }
 
     private void validateCommentAuthor(Comment comment) {
-        String currentMemberEmail = getCurrentMemberEmail();
+        String currentMemberEmail = securityContextService.getCurrentMemberEmail();
         if (!comment.isAuthor(currentMemberEmail)) {
-            throw new CommentPermissionException("Comment ID : " + comment.getId() + ", Email : " + currentMemberEmail + " Not Permission to Update this Comment", comment.getId());
+            throw new CommentPermissionException("Comment ID : " + comment.getId() + ", Email : " + currentMemberEmail + " Not Permission to Update this Comment.", comment.getId());
         }
     }
 
-    private String getCurrentMemberEmail() {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        if (authentication == null || !authentication.isAuthenticated()) {
-            throw new AccessDeniedException("User is not authenticated");
-        }
-        return authentication.getName();
-    }
-
-    private Member findMemberByEmail(String email) {
+    private Member findAuthenticatedMember() {
+        String email = securityContextService.getCurrentMemberEmail();
         return memberRepository.findByEmail(email)
                 .orElseThrow(() -> new MemberNotFoundException("Member Not Found With Email : " + email, email));
     }
-
 }
